# LARChess

./: .gitignore  .notes.txt.swp  CMakeLists.txt  README.md  build.sh  imgui.ini  notes.txt
AlphaZero/: CMakeLists.txt  pyproject.toml
AlphaZero/analysis/: REAME.MD
AlphaZero/cfg/: config.json  config_sl.json
AlphaZero/scripts/: data_processing.py  dataset.py  game_dataset.py  plot.py  shuffle_dataset.py
AlphaZero/src/: AlphaZero.cpp  AlphaZero.h  AlphaZeroMT.cpp  AlphaZeroMT.h  AlphaZeroV2.cpp  Environment.cpp  ReplayBuffer.cpp  ReplayBuffer.h  alphabot.cpp  alphabot.h  dataset.cpp  dataset.h  game.cpp  game.h  logger.cpp  logger.h  main.cpp  mcts.cpp  mcts.h  supLearn.cpp  supLearn.h  utils.cpp  utils.h
AlphaZero/src/agent/: alphabot.cpp  mcts.cpp  mctsMT.cpp
AlphaZero/src/game/: Environment.cpp  ReplayBuffer.cpp  game.cpp
AlphaZero/src/headers/: AlphaZeroMT.h  AlphaZeroV2.h  Environment.h  ReplayBuffer.h  alphabot.h  dataset.h  game.h  mcts.h  mctsMT.h  supLearn.h  utils.h
AlphaZero/src/include/: ResNet.h  ResNetJIT.h  network.h
AlphaZero/src/include/xtensor/: xadapt.hpp  xarray.hpp  xassign.hpp  xblockwise_reducer.hpp  xbroadcast.hpp  xbuffer_adaptor.hpp  xbuilder.hpp  xcomplex.hpp  xcontainer.hpp  xdynamic_view.hpp  xexception.hpp  xexpression.hpp  xfft.hpp  xfixed.hpp  xfunction.hpp  xfunctor_view.hpp  xgenerator.hpp  xiterator.hpp  xmanipulation.hpp  xmath.hpp  xmultiindex_iterator.hpp  xnorm.hpp  xnpy.hpp  xoffset_view.hpp  xoperation.hpp  xoptional.hpp  xoptional_assembly_storage.hpp  xrandom.hpp  xreducer.hpp  xscalar.hpp  xset_operation.hpp  xslice.hpp  xsort.hpp  xstrided_view.hpp  xstrided_view_base.hpp  xstrides.hpp  xtensor_forward.hpp  xtensor_simd.hpp  xutils.hpp  xview.hpp
AlphaZero/src/tests/: 1000.csv  1000_2t.csv  1000_3t.csv  1000_4t.csv  1000_4t_300s.csv  1000_4t_release.csv  2048.csv  600.csv  600_small_par.csv  CMakeLists.txt  alpha_vs_mcts.cpp  big_o_test.cpp  config_test_alpha.json  config_test_big_o.json  config_test_mctsMT.json  old_times.csv  test_alpha.cpp  test_mctsMT.cpp
AlphaZero/src/train/: AlphaZeroMT.cpp  AlphaZeroV2.cpp  dataset.cpp  supLearn.cpp
AlphaZero/src/utils/: logger.cpp  utils.cpp
AlphaZero/tests/: CMakeLists.txt
AlphaZero/tests/cfg/: config.json
AlphaZero/tests/scripts/: test_bot.cpp
AlphaZero/tests/src/: encoding_decoding.cpp  eval_bot.cpp  speed_test.cpp  test_bot.cpp
BBChessEngine/: CMakeLists.txt
BBChessEngine/src/: bb_magic_nums.cpp  bit_board.cpp  bit_board.h  bit_board_test.cpp  multi_core_alpha_beta.cpp  multi_core_perft.cpp
BBChessGame/: CMakeLists.txt
BBChessGame/cfg/: alpha_config.json  config.json
BBChessGame/src/: main.cpp
ChessEngine/: CMakeLists.txt
ChessEngine/src/: board.cpp  fen.cpp  main.cpp  minmax.cpp  move.cpp  move.h
ChessGUI/: CMakeLists.txt
ChessGUI/src/: ChessGUI.cpp  ChessGUI.h  main.cpp
ChessGUI/src/include/OpenGLEngine/: IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
ChessGame/: CMakeLists.txt
ChessGame/src/: main.cpp
docker/: yace.DockerFile
game/: ChessGUI.cpp  ChessGUI.h  a.out  main.cpp  main_bb.cpp
game/include/OpenGLEngine/: VertexArray.cpp
game/old/: main.cpp
src/: bit_board.cpp  bit_board.h  board.cpp  board.h  fen.cpp  main.cpp  minmax.cpp  minmax.h  move.cpp  move.h  utils.cpp  utils.h
src/bitboard/: bit_board.cpp  bit_board.h
tests/: bit_board_test.cpp
utils/: utils.h
